# nexus_robot_autonomous_navigation

./: README.md
minion_teleop/: CMakeLists.txt  package.xml
minion_teleop/launch/: keyboard_teleop.launch  logitech.launch  xbox360_teleop.launch
minion_teleop/scripts/: cmd2vec3  minion_teleop_key
minion_teleop/src/: minion_joy.cpp
nexus_robot_2wd/: CMakeLists.txt  package.xml
nexus_robot_2wd/firmware/Demo_MotorWheel/src/: main.cpp
nexus_robot_2wd/firmware/Encoder_data/src/: main.cpp  nexus_robot_specs.h
nexus_robot_2wd/firmware/MotorWheel_Closed_Loop_Count/src/: main.cpp  nexus_robot_specs.h
nexus_robot_2wd/firmware/MotorWheel_Encoder/src/: main.cpp
nexus_robot_2wd/firmware/Motorwheel_closed_loop/src/: main.cpp
nexus_robot_2wd/firmware/Motorwheel_key_teleop/src/: main.cpp  nexus_robot_specs.h
nexus_robot_2wd/firmware/Nexus_Firmware/src/: main.cpp
nexus_robot_2wd/hardware_rules/: 2-nexus-robot.rules  50-nexus-robot.rules  setRule.sh
nexus_robot_2wd/include/: nexus_odometry.h  nexus_odometry_v2.h  nexus_robot_params.h  nexus_robot_params.h.gch
nexus_robot_2wd/launch/: nexus_launcher_keyboard.launch  nexus_launcher_logitech.launch  nexus_launcher_logitech_simple.launch  zed_odom_launcher.launch
nexus_robot_2wd/maps/City_Science/: city_science_gmapping_01.pgm  city_science_gmapping_01.yaml  city_science_hector_01.yaml  city_science_hector_02.yaml  city_science_hector_03.yaml  city_science_hector_04.pgm  city_science_hector_04.yaml  city_science_hector_05.pgm  city_science_hector_05.yaml
nexus_robot_2wd/maps/Lunch_Room/: lunch_room_01.pgm  lunch_room_01.yaml  lunch_room_gmapping_01.pgm  lunch_room_gmapping_01.yaml  lunch_room_gmapping_02.pgm  lunch_room_gmapping_02.yaml  lunch_room_hector_01.yaml  lunch_room_hector_02.yaml
nexus_robot_2wd/maps/Media_Lab/: media_lab_cartographer_01.pgm  media_lab_cartographer_01.yaml  media_lab_gmapping_01.pgm  media_lab_gmapping_01.yaml  media_lab_gmapping_02.pgm  media_lab_gmapping_02.yaml  media_lab_hector_01.pgm  media_lab_hector_01.yaml  media_lab_hector_02.yaml  media_lab_hector_04.yaml  media_lab_hector_zed_01.yaml  media_lab_hector_zed_02.yaml
nexus_robot_2wd/rosbags/: city_science_03.bag  city_science_04.bag  city_science_06.bag  city_science_10.bag  lunch_room_03.bag  lunch_room_04.bag  media_lab_01.bag  media_lab_05.bag  test_01.bag
nexus_robot_2wd/rviz/: amcl_rviz.rviz  slam_rviz.rviz
nexus_robot_2wd/scripts/: odom2path.py
nexus_robot_2wd/src/: nexus_odometry.cpp  nexus_odometry_v2.cpp  nexus_robot_odom.cpp
nexus_robot_cartographer/: CMakeLists.txt  package.xml
nexus_robot_cartographer/configuration_files/: nexus_2d_localization.lua  nexus_2d_mapping.lua
nexus_robot_cartographer/launch/: assets_writer_nexus_2d.launch  assets_writer_nexus_3d.launch  backpack_2d_nexus.launch  backpack_2d_nexus_mapping.launch  nexus_2d_cartographer.launch  nexus_2d_localization.launch  nexus_2d_mapping.launch  (+1 more)
nexus_robot_localization/: CMakeLists.txt  package.xml
nexus_robot_mapping/: CMakeLists.txt  package.xml
nexus_robot_msgs/: CMakeLists.txt  package.xml
(+16 files in other folders)
